2003-01-22  Jacob Smullyan  <jsmullyan@wnyc.org>

	* pylibs/argextract.py: fixing import error.

2003-01-21  Jacob Smullyan <smulloni@smullyan.org>

	* pylibs/formlib: many changes, back and forth, resulting
	in no detectable forward progress.

2003-01-13  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/AE/Cache.py (_writeCompileCache): fixed typo.

2003-01-12  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/PyPgSQLcache.py: the pylibs used by the driver, below.

	* SkunkWeb/Services/pypgsqlcache.py: caching service for pypgsql
	driver.  This design is a pain in the neck.

	* pylibs/PyDO/pypgsqlconn.py: first draft of pypgsql PyDO driver,
	submitted by "John Pydo".

2003-01-11  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/PostgreSql/__init__.py: whitespace normalization; removed
	some dead code.

2003-01-10  Jacob Smullyan <smulloni@smullyan.org>

	* pylibs/formlib/dispatcher.py (Goto, Push, Pop): added optional
	"args" argument to constructors.

2003-01-06  Jacob Smullyan <smulloni@smullyan.org>

	* test/formlib/htdocs: numerous revisions to work with the
	refactoring of formlib.

	* pylibs/formlib: considerable refactoring to dispatcher, forms,
	and views.  The upshot of it all being that the dispatcher is now
	abstract; it doesn't assume that the dispatcher needs to start out
	with a reference to all the form objects.  Similarly, the form's
	process() method doesn't make assumptions about what is passed to
	it. Also, fields have a _setData(dict) method now, so we don't
	need to test (in Form.setData()) for field type; and in views.py,
	I removed the isviewable() method, and instead test for the
	presence of the "getView" method.

2003-01-03  James Richards  <jrichards@satie.wnyc.org>

	* test/formlib/htdocs/testAllViews.pyinc (form): Adding
	multipart/form-data enctype and display of uploaded file
	characteristics

2003-01-02  James Richards  <jrichards@satie.wnyc.org>

	* test/formlib/htdocs/testDispatch2.pyinc: modified test to work